# git-stories

./: .gitignore  CMakeLists.txt  LICENSE  asan-suppressions.txt
cmake/: FindSDL2.cmake
examples/: parameters.json
git_info/: go.mod  go.sum  main.go
git_info/config/: config.go  config.pb.go
git_info/gitinfo/: gitinfo.go
git_info/linter/: cpplinter.go  linter.go
git_info/utils/: utils.go
git_info/worker/: worker.go
lib/SDL2_gfx/: CMakeLists.txt
protobuf/: config.proto
src/: main.c  objects.c  objects.h  phisics.c  phisics.h  render.c  render.h  status.c  status.h  utils.c  utils.h  vector.c  vector.h  window_manager.c  window_manager.h
src/git_info/gitinfo/: gitinfo.go
src/git_info/linter/: cpplinter.go  linter.go
src/sdl_drawing/: objects.c  phisics.h  render.h  status.c  status.h  utils.c  utils.h  window_manager.c  window_manager.h
